--- a/1. easy/14. Longest Common Prefix.ipynb
+++ b/1. easy/14. Longest Common Prefix.ipynb
@@ -5,9 +5,11 @@
    "id": "695cd731",
    "metadata": {},
    "source": [
-    "плохое самостоятельное решение\n",
-    "Runtime: 69 ms, faster than 19.99% of Python3 online submissions for Longest Common Prefix.\n",
-    "Memory Usage: 13.9 MB, less than 50.02% of Python3 online submissions for Longest Common Prefix."
+    "Напишите функцию, которая находит самую длинную строку общего префикса среди массива строк. Если общего префикса нет, вернуть пустую строку \"\".\n",
+    "\n",
+    "Пример 1:\n",
+    "\n",
+    "```Input: strs = [\"flower\",\"flow\",\"flight\"] Output: \"fl\"```"
    ]
   },
   {
@@ -65,14 +67,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59da6c8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "58c66f27",
    "metadata": {},
@@ -125,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
