--- a/1. easy/26. Remove Duplicates from Sorted Array.ipynb
+++ b/1. easy/26. Remove Duplicates from Sorted Array.ipynb
@@ -2,58 +2,60 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37b17822",
+   "id": "d23dfc9d",
    "metadata": {},
    "source": [
-    "В один проход с добавлением в словарь"
+    "Удалить повторения из отсортированного массива"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "975e768b",
+   "execution_count": 5,
+   "id": "792ec8d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import List\n",
     "\n",
     "class Solution:\n",
-    "    def twoSum(self, nums: List[int], target: int) -> List[int]:\n",
-    "        d_h = {}\n",
+    "    def removeDuplicates(self, nums: List[int]) -> int:\n",
+    "        cur = ''\n",
+    "        cur_i = 0\n",
     "        for i in range(len(nums)):\n",
-    "            elem = nums[i]\n",
-    "            if (target - elem) in d_h:\n",
-    "                if i != d_h.get(target-elem):\n",
-    "                    return [i, d_h.get(target-elem)]\n",
-    "            d_h[elem] = i"
+    "            if nums[i] != cur:\n",
+    "                cur = nums[i]\n",
+    "                nums[cur_i] = cur\n",
+    "                cur_i += 1\n",
+    "\n",
+    "        return cur_i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f3f18068",
+   "execution_count": 6,
+   "id": "063ae556",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 1]"
+       "2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cl = Solution()\n",
-    "cl.twoSum([1, 2, 3], 5)"
+    "cl.removeDuplicates([1, 1, 2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2264032f",
+   "id": "5ff06390",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -75,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
