--- a/1. easy/9. Palindrome Number.ipynb
+++ b/1. easy/9. Palindrome Number.ipynb
@@ -5,7 +5,7 @@
    "id": "bba786a8",
    "metadata": {},
    "source": [
-    "Решение лучше 48%"
+    "На вход подается целое число x, вернуть true, если x является палиндром, и false в противном случае."
    ]
   },
   {
@@ -30,16 +30,6 @@
     "            return True\n",
     "        else:\n",
     "            return False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9875eb80",
-   "metadata": {},
-   "source": [
-    "Это супер (самостоятельное) решение\n",
-    "Runtime: 54 ms, faster than 98.18% of Python3 online submissions for Palindrome Number.\n",
-    "Memory Usage: 14 MB, less than 16.15% of Python3 online submissions for Palindrome Number."
    ]
   },
   {
@@ -112,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
